포트스 li 태그 padding 값 오류 & 알림 상자 버그 방지

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -34,7 +34,7 @@ var app = new Vue({
 				position: 'RIGHT',
 				year: 2020,
 				title: 'DailyGreen',
-				content: '매일 공부하자는 취지로 결성된 코딩 그룹입니다.\n',
+				content: '깃허브 잔디밭을 원동력삼아 매일 개발하며 공부하자를 모티브로 모인 개발 단체입니다. 제작하며 공부하는것을 즐거움으로 어기고 서로 배운것을 공유합니다. (2019-',
 				orgLink: 'https://github.com/DailyGreen',
 				img: 'https://avatars0.githubusercontent.com/u/40048911?s=200&v=4',
 				repos: [
@@ -64,7 +64,7 @@ var app = new Vue({
 			{
 				position: 'RIGHT',
 				title: 'KGSHC',
-				content: '한국게임과학고등학교 커뮤니티 사이트입니다.\n',
+				content: '한국게임과학고등학교 커뮤니티 사이트입니다.\n웹을 공부하고 처음 제작해본 싸이트로, 풀스택을 모두 담당했습니다. (현재는 운영문제로 중단 되었습니다.)',
 				img: 'https://github.com/kyechan99/KGSHC/blob/master/images/logo.png?raw=true',
 				repos: [
 					{
