--- a/_sass/jebl/_variables.scss
+++ b/_sass/jebl/_variables.scss
@@ -1,7 +1,7 @@
 
 // 테마색
 $background: #ffffff;
-$themeColor: #10AF85;
+$themeColor: #B897FF;
 $themeColorOpa: #6BC59C;
 
 // Colors
@@ -10,18 +10,18 @@ $black: #404640;
 $gray-black: #6f667a;
 
 // a 태그
-$striking: #59D6B5;
+$striking: #B897FF;
 // pre 배경 색
-$pre-bg-color: #E5F7F0;
+$pre-bg-color: #EDE7F6;
 // code 색
 $code: #5b635b;
-$code-bg-color: #E5F7F0;
+$code-bg-color: #EDE7F6;
 // blockquote 색
-$blockquote-bg: #F8FDFB;
-$blockquote-strike: #B6F0D9;
+$blockquote-bg: #FDF9FD;
+$blockquote-strike: #B897FF;
 // navbar active 색
-$nav-item-active: #2f3631;
-$nav-item-active-content: #b9fae9;
+$nav-item-active: #363036;
+$nav-item-active-content: #C5A4D8;
 
 // 100 300 400 500 700 900
 $notosans-thin: 300;
