UPDATE : Enable copy my colors & _posts file logic simple

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -115,8 +115,8 @@
 
 	});
 	function copyUrlToClipboard() {
-		var dummy = document.createElement('input'),
-		text = window.location.href;
+		var dummy = document.createElement('input');
+		var text = window.location.href;
 
 		document.body.appendChild(dummy);
 		dummy.value = text;
