--- a/_sass/jebl/_about.scss
+++ b/_sass/jebl/_about.scss
@@ -72,6 +72,34 @@
 				display: none;
 			}
 		}
+		.theme-block {
+			width: 18rem;
+			padding: 10px;
+			display: flex;
+			margin-top: 2rem;
+			margin-left: auto;
+			margin-right: auto;
+			border-radius: .5rem;
+			justify-content: space-around;
+			box-shadow: 5px 5px 8px #e6e6e6, -5px -5px 8px #ffffff;
+			.theme-btn {
+				width: 3rem;
+				height: 3rem;
+				border: 0;
+				border-radius: .5rem;
+				// background-color: tomato;
+				-webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.15);
+				-moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.15);
+				box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.15);
+				transition: all ease .3s;
+				&:hover {
+					transform: scale(1.1);
+				}
+				&:active {
+					transform: scale(.9);
+				}
+			}
+		}
 	}
 	.history-main {
 		font-size: 48px;
