--- a/_sass/jebl/_variables.scss
+++ b/_sass/jebl/_variables.scss
@@ -1,5 +1,4 @@
-
-// 테마색
+// Theme
 $background: #ffffff;
 $themeColor: #B897FF;
 $themeColorOpa: #6BC59C;
@@ -9,17 +8,17 @@ $bold-black: #212529;
 $black: #404640;
 $gray-black: #6f667a;
 
-// a 태그
+// a
 $striking: #B897FF;
-// pre 배경 색
+// pre
 $pre-bg-color: #EDE7F6;
-// code 색
+// code
 $code: #5b635b;
 $code-bg-color: #EDE7F6;
-// blockquote 색
+// blockquote
 $blockquote-bg: #FDF9FD;
 $blockquote-strike: #B897FF;
-// navbar active 색
+// navbar active
 $nav-item-active: #363036;
 $nav-item-active-content: #C5A4D8;
 
