--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -18,10 +18,7 @@
   </body>
   
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  {%- include script.html -%}
 <script>
 	
 var app = new Vue({
@@ -171,17 +168,13 @@ var app = new Vue({
 			dummy.select();
 			document.execCommand('copy');
 			document.body.removeChild(dummy);
+		},
+		nextPageBtn: function() {
+			$('html, body').animate({
+				scrollTop: $('.history-main').offset().top
+			}, 500);
 		}
 	}
-})
-</script>
-<script type="text/javascript">
-jQuery(function ($) {
-	$('#next-page-btn').click(function() {
-		$('html, body').animate({
-			scrollTop: $('.history-main').offset().top
-		}, 500);
-	})
 })
 </script>
 </html>
