--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,9 @@
     {%- seo -%}
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico">
     <!-- <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://yuristrap-cdn.vercel.app/1.0.2/css/yuri.css">
+	
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/assets/css/syntax.css">
