--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
   <body>
 
     {%- include header.html -%}
-	<div class="alertBox text-center">주소가 복사되었습니다.</div>
+	<div class="alertBox text-center light-bg">주소가 복사되었습니다.</div>
     <main class="page-content" aria-label="Content">
 		<div class="container-fluid post-container-fluid">
 			{% if page.haveImg == true %}
