--- a/_sass/jebl/_variables.scss
+++ b/_sass/jebl/_variables.scss
@@ -18,6 +18,7 @@ $code-bg-color: #EDE7F6;
 // blockquote
 $blockquote-bg: #FDF9FD;
 $blockquote-strike: #B897FF;
+$blockquote-night-bg: #141217;
 // navbar active
 $nav-item-active: #363036;
 $nav-item-active-content: #C5A4D8;
