--- a/_sass/jebl/_base.scss
+++ b/_sass/jebl/_base.scss
@@ -1,14 +1,32 @@
 body{
     font-family: 'Noto Sans KR', sans-serif;
-    background-color: $background;
+    // background-color: $background;
 }
 
+:root {
+	--boldColor: #{$bold-black};
+	--postImgShadow: 11px 11px 22px #919191, -11px -11px 22px #ffffff;
+	--quickBtnShadow: 5px 5px 8px #e6e6e6, -5px -5px 8px #ffffff;
+	--blockquoteBG: #{$blockquote-bg};
+	--footerBg: #f5f7f2;
+}
+
+html[data-theme='dark'] {
+	--boldColor: #fff;
+	--postImgShadow: 11px 11px 22px #131212, -11px -11px 22px #101010;
+	--quickBtnShadow: 5px 5px 8px #150f0f, -5px -5px 8px #0c0a0a;
+	--blockquoteBG: #{$blockquote-night-bg};
+	--footerBg: var(--backgroundColor);
+	.octicon {
+		fill: #fff;
+	}
+}
 
 h1 {
     margin-top: 50px;
     padding-left: 10px;  
     border-left: $striking 8px solid;
-	color: $bold-black;
+	color: var(--boldColor);
 }
 
 h2 {
@@ -16,20 +34,22 @@ h2 {
 	margin-bottom: 10px;
 	font-size: 25px;
 	font-weight: 600;
-	color: $bold-black;
+	color: var(--boldColor);
 }
 
 h3 {
     font-size: 22px;
     margin-top: 6px;
     margin-bottom: 6px;
-	color: rgba($bold-black, 0.8);
+	color: var(--boldColor);
+	opacity: .8;
+	// color: rgba($bold-black, 0.8);
 }
 
 p {
 	font-weight: $notosans-thin;
     font-size: $p-size;
-	color: $black;
+	// color: $black;
 }
 
 code {
@@ -71,7 +91,7 @@ ul {
 blockquote {
     padding-top: 5px;
     padding-bottom: 2px;
-    background-color: $blockquote-bg;
+    background-color: var(--blockquoteBG);
     border-left: $blockquote-strike 4px solid;
     padding-left: 14px;
     p {
@@ -106,6 +126,7 @@ div.highlighter-rouge {
 }
 
 button {
+	color: var(--textColor);
 	&:active,
 	&:focus {
 		outline: none !important;
