--- a/_sass/jebl/_base.scss
+++ b/_sass/jebl/_base.scss
@@ -113,6 +113,7 @@ div.highlighter-rouge {
 	border-radius: 5px;
 	font-size: $p-size;
 	pre {
+		margin-top: 0px;
 		margin-bottom: 0px;
 		&.highlight {
 			background-color: $pre-bg-color;
