FIX : Wrong category naming and url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 				   {% endif %} 
 				   class="nav-link align-self-center">홈</a>
 				<a href="{{ '/DevNote' | prepend: site.baseurl }}/" 
-				   {% if curPage[1] == "DevNote" or curPage[1] == "lib" or curPage[1] == "dev"%} 
+				   {% if curPage[1] == "DevNote" or curPage[1] == "lib" or curPage[1] == "dev" or curPage[1] == "tech" %} 
 				   class="nav-link align-self-center active" 
 				   {% endif %} 
 				   class="nav-link align-self-center">개발노트</a>
