--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -514,7 +514,7 @@
 }
 
 /* Alert - Box */
-.alertBox{
+.alertBox {
 	position: fixed;
     width: 400px;
     height: auto;
@@ -544,3 +544,22 @@
  90% { opacity: 1; } 
  100% { opacity: 0; } 
 }
+
+/* Video width controller (iframe, object, embed) */
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+	iframe,
+	object,
+	embed {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+ 
