--- a/_sass/jebl/_variables.scss
+++ b/_sass/jebl/_variables.scss
@@ -16,7 +16,7 @@ $pre-bg-color: #EDE7F6;
 $code: #5b635b;
 $code-bg-color: #EDE7F6;
 // blockquote
-$blockquote-bg: #FDF9FD;
+$blockquote-bg: #f9efff;
 $blockquote-strike: #B897FF;
 $blockquote-night-bg: #141217;
 // navbar active
