--- a/_sass/jebl/_about.scss
+++ b/_sass/jebl/_about.scss
@@ -19,6 +19,7 @@
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
+			border-radius: .5rem;
 			@include media("(max-width: 768px)") {
 				margin-top: 30px;
 			}
@@ -205,7 +206,7 @@
 			.chart-box {
 				width: 10px;
 				height: 100%;
-				background-color: $striking;
+				background-color: $chart-box;
 				margin-left: auto;
 				margin-right: auto;
 			}
