--- a/_sass/jebl/_base.scss
+++ b/_sass/jebl/_base.scss
@@ -8,7 +8,7 @@ body{
 
 :root {
 	--boldColor: #{$bold-black};
-	--postImgShadow: 11px 11px 22px #919191, -11px -11px 22px #ffffff;
+	--postImgShadow: 11px 11px 22px #d0d0d0, -11px -11px 22px #ffffff;
 	--quickBtnShadow: 5px 5px 8px #e6e6e6, -5px -5px 8px #ffffff;
 	--blockquoteBG: #{$blockquote-bg};
 	--footerBg: #f5f7f2;
@@ -51,8 +51,13 @@ h3 {
     margin-top: 6px;
     margin-bottom: 6px;
 	color: var(--boldColor);
-	opacity: .8;
+	opacity: .9;
 	// color: rgba($bold-black, 0.8);
+}
+h4 {
+    font-size: 18px;
+	color: var(--boldColor);
+	opacity: .8;
 }
 
 p {
@@ -126,6 +131,7 @@ div.highlighter-rouge {
 		margin-bottom: 0px;
 		&.highlight {
 			background-color: $pre-bg-color;
+			overflow-x: auto;
 		}
 	}
 	code {
