--- a/_sass/jebl/_layout.scss
+++ b/_sass/jebl/_layout.scss
@@ -549,7 +549,7 @@
 .video-container {
 	position: relative;
 	padding-bottom: 56.25%;
-	padding-top: 30px;
+	// padding-top: 30px;
 	height: 0;
 	overflow: hidden;
 	iframe,
