FIX : about page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -37,15 +37,50 @@ var app = new Vue({
 		logs: [
 			{
 				position: 'RIGHT',
-				year: 2020,
+				year: 2021,
 				title: 'DailyGreen',
-				content: '깃허브 잔디밭을 원동력삼아 매일 개발하며 공부하자를 모티브로 모인 개발 단체입니다. 제작하며 공부하는것을 즐거움으로 어기고 서로 배운것을 공유합니다. (2019-',
+				content: '깃허브 잔디밭을 원동력삼아 매일 개발하며 공부하자를 모티브로 모인 개발 단체입니다. 제작하며 공부하는것을 즐거움으로 어기고 서로 배운것을 공유합니다. (2018 ~ )',
 				orgLink: 'https://github.com/DailyGreen',
 				img: 'https://avatars0.githubusercontent.com/u/40048911?s=200&v=4',
 				repos: [
 					{
-						name: 'GAPA',
+						name: 'GAPA (웹)',
 						url: 'https://github.com/DailyGreen/GAPA'
+					},
+					{
+						name: 'TILER (게임)',
+						url: 'https://github.com/DailyGreen/Tiler-Client'
+					}
+				]
+			},
+			{
+				position: 'LEFT',
+				year: 2020,
+				title: 'BLUR PENCIL',
+				content: '군 복무중 osam 프로그램의 개발 해커톤에서\n개발자 학우들과 팀을 꾸려 제작한 웹 프로젝트입니다.\n이미지 자동 검열 클라우드 서비스로,\n군 보안을 강화시킨다는 목표를 가지고 있습니다.',
+				orgLink: 'https://github.com/osamhack2020/Cloud_BlurPencil_GonNyong4',
+				img: 'https://github.com/kyechan99/Cloud_BlurPencil_GonNyong4/raw/master/client/src/images/logo.png',
+				repos: [
+					{
+						name: 'BLUR PENCIL 소개',
+						url: 'http://localhost:4000/web/2020/11/01/Blur-Pencil.html'
+					}
+				]
+			},
+			{
+				position: 'RIGHT',
+				title: 'Yuristrap',
+				content: '웹 개발을 더욱 빠르고 편리하게 도와주는 프레임워크입니다.\n타 프레임워크 의존도를 줄이고 순수 프로젝트만을 제작하기 위해 개발을 시작하였습니다.',
+				orgLink: 'https://github.com/DailyGreen',
+				img: 'https://avatars1.githubusercontent.com/u/68942934?s=200&v=4',
+				repos: [
+					{
+						name: 'Yuristrap',
+						url: 'https://github.com/yuristrap/yuristrap'
+					},
+					{
+						name: 'Yuristrap Docs',
+						url: 'https://yuristrap.github.io/'
 					}
 				]
 			},
@@ -53,7 +88,7 @@ var app = new Vue({
 				position: 'LEFT',
 				year: 2017,
 				title: 'SHAPE-OF-YOU',
-				content: '멀티 게임',
+				content: '처음으로 멀티를 이용한 게임입니다.\n간단한 게임이지만 네트워크에 대한 기초 지식과 여러 시도를 해볼 수 있었습니다. 간단함과 온라인을 무기로 게임 전시를 통해 어린 친구들에게 주목을 받을 수 있었습니다.	',
 				img: 'https://github.com/Lazyevilsquid/Shape-Of-You-Client/blob/master/Assets/Sprites/UI/thief.png?raw=true',
 				repos: [
 					{
@@ -65,7 +100,7 @@ var app = new Vue({
 			{
 				position: 'RIGHT',
 				title: 'KGSHC',
-				content: '한국게임과학고등학교 커뮤니티 사이트입니다.\n웹을 공부하고 처음 제작해본 싸이트로, 풀스택을 모두 담당했습니다. (현재는 운영문제로 중단 되었습니다.)',
+				content: '한국게임과학고등학교 커뮤니티 사이트입니다.\n웹을 공부하고 처음 제작해본 사이트로, 풀스택을 모두 담당했습니다.\n(현재는 서버 운영문제로 중단 되었습니다.)',
 				img: 'https://github.com/kyechan99/KGSHC/blob/master/images/logo.png?raw=true',
 				repos: [
 					{
@@ -78,13 +113,13 @@ var app = new Vue({
 			{
 				position: 'LEFT',
 				title: 'LEMONADE API',
-				content: '어쩌구 저쩌구 프로젝트',
+				content: 'DB 연동을 개발중인 게임에 쉽게 연동하고\n리더보드, 업적 등의 기능을 제공합니다.\n친구와 데이터를 공유하거나\n	서로 다른 게임간의 아이템의 거래가 가능하도록 제작하였습니다.\n(현재는 서버 운영문제로 중단 되었습니다.)',
 				img: 'https://avatars0.githubusercontent.com/u/27432458?s=200&v=4',
 				repos: [
 					{
 						name: 'API',
-						url: '',
-						msg: '현재 개발중입니다.'
+						url: 'https://github.com/LemonClub',
+						msg: '현재 운영중이지 않습니다.'
 					}
 				]
 			},
