FIX : Unloaded old url image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 		<nav class="nav-menu dsp-flex justify-between">
 			<div class="form-check dsp-flex align-items-center">
 				<input class="container_toggle form-switch-input" type="checkbox" id="switch" name="mode">
-				<label class="form-switch-label size-md dark" for="switch"></label>
+				<label class="form-switch-label size-sm dark" for="switch"></label>
 			</div>
 			<div class="dsp-flex justify-end">
 				<a href="{{ '' | prepend: site.baseurl }}/" 
