FIX : about wrong url

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -63,7 +63,7 @@ var app = new Vue({
 				repos: [
 					{
 						name: 'BLUR PENCIL 소개',
-						url: 'http://localhost:4000/web/2020/11/01/Blur-Pencil.html'
+						url: 'https://kyechan99.github.io/web/2020/11/01/Blur-Pencil.html'
 					}
 				]
 			},
@@ -71,7 +71,7 @@ var app = new Vue({
 				position: 'RIGHT',
 				title: 'Yuristrap',
 				content: '웹 개발을 더욱 빠르고 편리하게 도와주는 프레임워크입니다.\n타 프레임워크 의존도를 줄이고 순수 프로젝트만을 제작하기 위해 개발을 시작하였습니다.',
-				orgLink: 'https://github.com/DailyGreen',
+				orgLink: 'https://github.com/yuristrap',
 				img: 'https://avatars1.githubusercontent.com/u/68942934?s=200&v=4',
 				repos: [
 					{
@@ -101,6 +101,7 @@ var app = new Vue({
 				position: 'RIGHT',
 				title: 'KGSHC',
 				content: '한국게임과학고등학교 커뮤니티 사이트입니다.\n웹을 공부하고 처음 제작해본 사이트로, 풀스택을 모두 담당했습니다.\n(현재는 서버 운영문제로 중단 되었습니다.)',
+				orgLink: 'https://github.com/KGSH',
 				img: 'https://github.com/kyechan99/KGSHC/blob/master/images/logo.png?raw=true',
 				repos: [
 					{
